update auth me
