# internal/api/handler/interfaces/IAuthHandler.go
@@ -10,5 +10,6 @@ type Auth interface {
 	ForgotPasswordUser(ctx *gin.Context)
 	ResetPasswordUser(ctx *gin.Context)
 	GetAuthMe(ctx *gin.Context)
+	UpdateAuthMe(ctx *gin.Context)
 	RefreshToken(ctx *gin.Context)
 }
