# internal/api/routers/auth.go
@@ -24,6 +24,7 @@ func UserRouter(api *gin.RouterGroup, middleware middleware.Middleware, authHand
 		{
 			authMe.PATCH("/change-password", authHandler.ChangePasswordUser)
 			authMe.GET("me", authHandler.GetAuthMe)
+			authMe.PUT("me", authHandler.UpdateAuthMe)
 		}
 	}
 }
